--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^4.5.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.15.0",
     "webpack-dev-server": "^3.11.1",
     "wepack-cli": "0.0.1-security"
   },
